--- a/project_report.Rmd
+++ b/project_report.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "project_report"
-output: html_document
+output: 
+  html_document:
+    toc: true
+    theme: united
+date: "12/17/2021"
 ---
 
 ```{r setup, include=FALSE}
