--- a/data_cleaning_and_nn_bone.Rmd
+++ b/data_cleaning_and_nn_bone.Rmd
@@ -110,7 +110,7 @@ data_subset_nn <- complete(data_imp)
 #summary(data_subset_nn)
 ```
 
-```{r}
+```{r, echo=FALSE}
 data_subset_nn <- subset(data_subset_nn, select = -c(morphology, primary_diagnosis))
 names(data_subset_nn)
 ```
@@ -301,14 +301,8 @@ nn <- neuralnet(vital_status_Alive ~ project_id_BEATAML1.0_COHORT + project_id_B
                 linear.output=FALSE,
                 threshold=0.01)
 
-plot(nn)
+# plot(nn)
 ```
-
-
-```{r}
-nn$result.matrix
-```
-
 
 
 ```{r}
