--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -325,8 +325,8 @@ train_nn <- data_subset_nn_normalized[train_ind,]
 test_nn <- data_subset_nn_normalized[-train_ind,]
 
 # Temporarily removing numeric variables
-train_nn_temp <- subset(train_nn, select = -c(1:5))
-test_nn_temp <- subset(test_nn, select = -c(1:5))
+train_nn <- subset(train_nn, select = -c(1:5))
+test_nn <- subset(test_nn, select = -c(1:5))
 ```
 
 
@@ -337,23 +337,18 @@ test_nn_temp <- subset(test_nn, select = -c(1:5))
 
 # Making the neural network model
 nn <- neuralnet(vital_status_Alive ~ project_id_BEATAML1.0_COHORT + project_id_BEATAML1.0_CRENOLANIB + project_id_CGCI_BLGSP + project_id_GENIE_DFCI + project_id_GENIE_JHU + project_id_GENIE_MDA + project_id_GENIE_MSK + project_id_GENIE_UHN + project_id_GENIE_VICC + project_id_MMRF_COMMPASS +  project_id_OHSU_CNL + project_id_TARGET_ALL_P1 + project_id_TARGET_ALL_P2 + project_id_TARGET_ALL_P3 + project_id_TARGET_AML + project_id_TARGET_NBL + project_id_TCGA_LAML + ethnicity_hispanic + ethnicity_not_hispanic + gender_female + gender_male + race_ameri_ind_or_alaska + race_asian +  race_black_or_afr_ameri + race_hawaiian_or_pacific_islander + race_other + race_white + iss_stage_I + iss_stage_II + iss_stage_III + site_of_resection_or_biopsy_Abdomen_NOS + site_of_resection_or_biopsy_Blood + site_of_resection_or_biopsy_Bone_marrow + site_of_resection_or_biopsy_Bones_of_skull_and_face + site_of_resection_or_biopsy_Cheek_mucosa + site_of_resection_or_biopsy_Connective_and_other_soft_tissues + site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS + site_of_resection_or_biopsy_Head_face_or_neck_NOS + site_of_resection_or_biopsy_Hematopoietic_system_NOS + site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes + site_of_resection_or_biopsy_Kidney_NOS + site_of_resection_or_biopsy_Lip_NOS + site_of_resection_or_biopsy_Liver + site_of_resection_or_biopsy_Lower_gum + site_of_resection_or_biopsy_Lymph_nodes_of_head_face_neck + site_of_resection_or_biopsy_Mandible + site_of_resection_or_biopsy_Mouth_NOS + site_of_resection_or_biopsy_Ovary + site_of_resection_or_biopsy_Pelvis_NOS + site_of_resection_or_biopsy_Peritoneum_NOS + site_of_resection_or_biopsy_Retroperitoneum + site_of_resection_or_biopsy_Small_intestine_NOS + site_of_resection_or_biopsy_Specified_parts_of_peritoneum + site_of_resection_or_biopsy_Spleen + site_of_resection_or_biopsy_Testis_NOS + site_of_resection_or_biopsy_Vestibule_of_mouth + tissue_or_organ_of_origin_Bone_marrow + tissue_or_organ_of_origin_Bones_of_skull_and_face + tissue_or_organ_of_origin_Hematopoietic_system_NOS + tissue_or_organ_of_origin_Orbit_NOS,
-                data=train_nn_temp,
+                data=train_nn,
                 hidden=c(50, 10),#c(50, 10),
                 linear.output=FALSE,
-                threshold=0.001)
+                threshold=0.01)
 ```
 
-
-```{r, echo=FALSE}
-# nn$result.matrix
-# plot(nn)
-```
 
 ```{r, echo=FALSE}
 # Testing the resulting output
 prediction_threshold <- 0.5
-nn_train_results <- compute(nn, train_nn_temp)
-nn_test_results <- compute(nn, test_nn_temp)
+nn_train_results <- compute(nn, train_nn)
+nn_test_results <- compute(nn, test_nn)
 
 train_prediction <- nn_train_results$net.result
 train_prediction[train_prediction >= prediction_threshold] <- 1
@@ -383,6 +378,6 @@ confusionMatrix(factor(test_prediction), factor(test_actual))
 
 Yitian:
 
-Rudra: worked on initial data preprocessing by converting empty values to `NA`, and then did further preprocessing of the data for the neural network model.
+Rudra: worked on initial data preprocessing by converting empty values to `NA`, then did further preprocessing of the data for the neural network model, and finally implemented and evaluated the neural network model.
 
 Jorge:
