--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -6,6 +6,7 @@ output:
     theme: united
   pdf_document:
     toc: yes
+header-includes: \usepackage{setspace}\doublespacing
 author: Yitian Cai, Rudra Guin, Jorge Portugal
 date: "12/17/2021"
 fontsize: 12pt
@@ -15,19 +16,23 @@ fontsize: 12pt
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 ```
 
+```{r}
+## Working directory (to be set manually) - yt ultimately remove
+## setwd("C:/Users/Rudra Guin/Documents/UMich/Biostatistics_625/biostat625_final_project")
+```
+
 # Introduction
 
 For this project, our group chose to perform statistical analysis using the Clinical Data Set from the Clinical Package of bone marrow cancer data. It was collected from the National Cancer Institute (NCI) genomic data portal. The version of the dataset we used was released by October 29, 2021. The bone marrow cancer can damage the bones, immune system, kidneys, and red blood cell count. The dataset contains 16,029 different cases of bone marrow cancer. We planned on using it for survival analysis and machine learning methodologies.
 
 # Data Description
-
 The dataset contains 47 clinical variables. At the beginning, we tried to include the biospecimen data in order to increase the dimension of our dataset, but we found that most of those genomics data were missing, which would not provide us too much help. So, we decided to stick with the clinical data of bone marrow. Vital status means whether the patients were alive or dead at the time the data were collected. Our dataset contains 9,036 alive cases and 3,551 dead cases. Others were either missing or recorded as "unknown" or "not reported".
 
 # Data Preprocessing
 
-The initial dataset contains several missing values among the different features. So, before going into analysis and modeling, we first clean up and pre-process the data. First, we remove all the observations that have missing values for vital status, because vital status is the one we wish to forecast or predict. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believe will cause too much inaccuracy after data imputation. After that, we used mice() to impute those missing values. The mice package implements a method to deal with missing data and it generates Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contains 70% of the data, and the test set contains the rest 30% of the data.
+The initial dataset has several missing values among the different features. So, before going into analysis and modeling, we first clean up and pre-process the data. First, we remove all the observations that have missing values for vital status, because vital status is the one we wish to forecast or predict. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believe will cause too much inaccuracy after data imputation. After that, we used mice() to impute those missing values. The mice package implements a method to deal with missing data and it generates Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contains 70% of the data, and the test set contains the rest 30% of the data.
 
-```{r, echo=FALSE, message=FALSE}
+```{r, echo=FALSE}
 # Necessary libraries
 library(mice)
 library(fastDummies)
@@ -124,7 +129,7 @@ data2 <- subset(data2, select = -c(age_is_obfuscated, cause_of_death, days_to_de
 # summary(data)
 ```
 
-```{r, echo=FALSE, message=FALSE}
+```{r, echo=FALSE}
 # Impute missing values
 data_imp <- mice(data2, m=5, method = "sample", printFlag = FALSE)
 ```
@@ -142,9 +147,8 @@ We first conducted some survival analysis
 
 ## Machine Learning Modeling and Analysis
 
-We also performed some machine learning modeling and evaluated the effectiveness of the models' prediction power of the vital status of certain patients. We implemented a random forest model and a neural network model.
+We also performed some machine learning modeling and evaluated the effectiveness of the models' prediction power of the vital status of certain patients.
 
-### Random Forest
 
 ```{r, echo=FALSE}
 # Random Forest:
@@ -163,35 +167,65 @@ test_rf$vital_status <- factor(test_rf$vital_status)
 rf <- randomForest(vital_status ~ ., data=train_rf, na.action = na.omit)
 ```
 
-The following plots represent the error of the model error associated with number of trees used, as well as the importance of the different predictor variables used.
 
 ```{r, echo=FALSE}
-plot(rf, main = "Random Forest")
-varImpPlot(rf, main = "Importance of the Variables")
+# Plot to see the performance of different number of trees
+plot(rf, main = "Random Forest", xlim = range(0, 150))
 ```
 
-The following displays a confusion matrix for the predictions on the training set as well as the testing set.
-
 ```{r, echo=FALSE}
+rf2 <- randomForest(vital_status ~ ., data=train_rf, na.action = na.omit, ntree = 20)
+
+# Plot to see the importance of different variables on vital status
+varImpPlot(rf2, main = "Importance of the Variables")
+```
+
+
+```{r}
 # Results:
-p1 <- predict(rf, train_rf)
+p1 <- predict(rf2, train_rf)
 confusionMatrix(p1, train_rf$vital_status)
-p2 <- predict(rf, test_rf)
+p2 <- predict(rf2, test_rf)
 confusionMatrix(p2, test_rf$vital_status)
 ```
 
-### Neural Network
 
 ```{r, echo=FALSE}
-# Neural Network:
-
+# Neural Network
 data_subset_nn <- complete(data_imp)
 #summary(data_subset_nn)
 data_subset_nn <- subset(data_subset_nn, select = -c(morphology, primary_diagnosis))
 #names(data_subset_nn)
 ```
 
-The neural network model utilized the same predictor variables as the random forest model. However, further data processing was conducted on the dataset as dummy variables were created for each categorical feature.
+
+```{r, echo=FALSE}
+# project_id=as.factor(project_id)                                                <== "factored variable"
+# age_at_index=as.numeric(age_at_index)
+# days_to_birth=as.numeric(days_to_birth)
+# ethnicity=as.factor(ethnicity)                                                  <== "factored variable"
+# gender=as.factor(gender)                                                        <== "factored variable"
+# race=as.factor(race)                                                            <== "factored variable"
+# vital_status=as.factor(vital_status)                                            <== "factored variable"
+# age_at_diagnosis=as.numeric(age_at_diagnosis)
+# days_to_last_follow_up=as.numeric(days_to_last_follow_up)
+# days_to_last_known_disease_status=as.numeric(days_to_last_known_disease_status)
+# iss_stage=as.factor(iss_stage)                                                  <== "factored variable"
+# site_of_resection_or_biopsy=as.factor(site_of_resection_or_biopsy)              <== "factored variable"
+# tissue_or_organ_of_origin=as.factor(tissue_or_organ_of_origin)                  <== "factored variable"
+```
+
+
+```{r, echo=FALSE}
+unique(data_subset_nn$project_id)
+unique(data_subset_nn$ethnicity)
+unique(data_subset_nn$gender)
+unique(data_subset_nn$race)
+unique(data_subset_nn$vital_status)
+unique(data_subset_nn$iss_stage)
+unique(data_subset_nn$site_of_resection_or_biopsy)
+unique(data_subset_nn$tissue_or_organ_of_origin)
+```
 
 
 ```{r, echo=FALSE}
@@ -245,7 +279,6 @@ data_subset_nn_normalized <- subset(data_subset_nn_normalized,
 
 
 ```{r, echo=FALSE}
-# Renaming certain dummy-variable columns to use for the neural network model
 names(data_subset_nn_normalized) <- c(
   "age_at_index",
   "days_to_birth",
@@ -326,60 +359,54 @@ train_nn <- data_subset_nn_normalized[train_ind,]
 test_nn <- data_subset_nn_normalized[-train_ind,]
 
 # Temporarily removing numeric variables
-train_nn <- subset(train_nn, select = -c(1:5))
-test_nn <- subset(test_nn, select = -c(1:5))
+train_nn_temp <- subset(train_nn, select = -c(1:5))
+test_nn_temp <- subset(test_nn, select = -c(1:5))
 ```
 
 
-```{r, echo=FALSE}
+```{r}
 ## Neural Network
 ## (https://datascienceplus.com/neuralnet-train-and-test-neural-networks-using-r/)
 ## (http://uc-r.github.io/ann_classification)
 
 # Making the neural network model
 nn <- neuralnet(vital_status_Alive ~ project_id_BEATAML1.0_COHORT + project_id_BEATAML1.0_CRENOLANIB + project_id_CGCI_BLGSP + project_id_GENIE_DFCI + project_id_GENIE_JHU + project_id_GENIE_MDA + project_id_GENIE_MSK + project_id_GENIE_UHN + project_id_GENIE_VICC + project_id_MMRF_COMMPASS +  project_id_OHSU_CNL + project_id_TARGET_ALL_P1 + project_id_TARGET_ALL_P2 + project_id_TARGET_ALL_P3 + project_id_TARGET_AML + project_id_TARGET_NBL + project_id_TCGA_LAML + ethnicity_hispanic + ethnicity_not_hispanic + gender_female + gender_male + race_ameri_ind_or_alaska + race_asian +  race_black_or_afr_ameri + race_hawaiian_or_pacific_islander + race_other + race_white + iss_stage_I + iss_stage_II + iss_stage_III + site_of_resection_or_biopsy_Abdomen_NOS + site_of_resection_or_biopsy_Blood + site_of_resection_or_biopsy_Bone_marrow + site_of_resection_or_biopsy_Bones_of_skull_and_face + site_of_resection_or_biopsy_Cheek_mucosa + site_of_resection_or_biopsy_Connective_and_other_soft_tissues + site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS + site_of_resection_or_biopsy_Head_face_or_neck_NOS + site_of_resection_or_biopsy_Hematopoietic_system_NOS + site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes + site_of_resection_or_biopsy_Kidney_NOS + site_of_resection_or_biopsy_Lip_NOS + site_of_resection_or_biopsy_Liver + site_of_resection_or_biopsy_Lower_gum + site_of_resection_or_biopsy_Lymph_nodes_of_head_face_neck + site_of_resection_or_biopsy_Mandible + site_of_resection_or_biopsy_Mouth_NOS + site_of_resection_or_biopsy_Ovary + site_of_resection_or_biopsy_Pelvis_NOS + site_of_resection_or_biopsy_Peritoneum_NOS + site_of_resection_or_biopsy_Retroperitoneum + site_of_resection_or_biopsy_Small_intestine_NOS + site_of_resection_or_biopsy_Specified_parts_of_peritoneum + site_of_resection_or_biopsy_Spleen + site_of_resection_or_biopsy_Testis_NOS + site_of_resection_or_biopsy_Vestibule_of_mouth + tissue_or_organ_of_origin_Bone_marrow + tissue_or_organ_of_origin_Bones_of_skull_and_face + tissue_or_organ_of_origin_Hematopoietic_system_NOS + tissue_or_organ_of_origin_Orbit_NOS,
-                data=train_nn,
+                data=train_nn_temp,
                 hidden=c(50, 10),#c(50, 10),
                 linear.output=FALSE,
                 threshold=0.01)
+
+plot(nn)
 ```
 
 
 ```{r, echo=FALSE}
+nn$result.matrix
+```
+
+```{r, echo=FALSE}
 # Testing the resulting output
 prediction_threshold <- 0.5
-nn_train_results <- compute(nn, train_nn)
-nn_test_results <- compute(nn, test_nn)
+nn.results <- compute(nn, test_nn_temp)
 
-train_prediction <- nn_train_results$net.result
-train_prediction[train_prediction >= prediction_threshold] <- 1
-train_prediction[train_prediction < prediction_threshold] <- 0
-train_prediction <- c(train_prediction)
-train_actual <- train_nn$vital_status_Alive
+prediction <- nn.results$net.result
+prediction[prediction >= prediction_threshold] <- 1
+prediction[prediction < prediction_threshold] <- 0
+prediction <- c(prediction)
+actual <- test_nn$vital_status_Alive
 
-test_prediction <- nn_test_results$net.result
-test_prediction[test_prediction >= prediction_threshold] <- 1
-test_prediction[test_prediction < prediction_threshold] <- 0
-test_prediction <- c(test_prediction)
-test_actual <- test_nn$vital_status_Alive
-
-# Training set predictions
-confusionMatrix(factor(train_prediction), factor(train_actual))
-# Testing set predictions
-confusionMatrix(factor(test_prediction), factor(test_actual))
+confusionMatrix(factor(prediction), factor(actual))
 ```
 
 # Results
 
 
-
 # Conclusion
-
 
 
 # Division of Work:
 
-Yitian:
+Yitian: worked on initial data preprocessing by transforming all variables into numeric or factor, then worked on data imputation and data cleaning, and finally implemented and evaluated the random forest model.
 
 Rudra: worked on initial data preprocessing by converting empty values to `NA`, then did further preprocessing of the data for the neural network model, and finally implemented and evaluated the neural network model.
 
