--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -16,10 +16,6 @@ fontsize: 12pt
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 ```
 
-```{r}
-## Working directory (to be set manually) - yt ultimately remove
-## setwd("C:/Users/Rudra Guin/Documents/UMich/Biostatistics_625/biostat625_final_project")
-```
 
 # Introduction
 
@@ -32,7 +28,7 @@ The dataset contains 47 clinical variables. At the beginning, we tried to includ
 
 The initial dataset has several missing values among the different features. So, before going into analysis and modeling, we first clean up and pre-process the data. First, we remove all the observations that have missing values for vital status, because vital status is the one we wish to forecast or predict. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believe will cause too much inaccuracy after data imputation. After that, we used mice() to impute those missing values. The mice package implements a method to deal with missing data and it generates Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contains 70% of the data, and the test set contains the rest 30% of the data.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, message=FALSE}
 # Necessary libraries
 library(mice)
 library(fastDummies)
@@ -149,6 +145,7 @@ We first conducted some survival analysis
 
 We also performed some machine learning modeling and evaluated the effectiveness of the models' prediction power of the vital status of certain patients.
 
+### Random Forest
 
 ```{r, echo=FALSE}
 # Random Forest:
@@ -189,6 +186,7 @@ p2 <- predict(rf2, test_rf)
 confusionMatrix(p2, test_rf$vital_status)
 ```
 
+### Neural Network
 
 ```{r, echo=FALSE}
 # Neural Network
@@ -196,35 +194,6 @@ data_subset_nn <- complete(data_imp)
 #summary(data_subset_nn)
 data_subset_nn <- subset(data_subset_nn, select = -c(morphology, primary_diagnosis))
 #names(data_subset_nn)
-```
-
-
-```{r, echo=FALSE}
-# project_id=as.factor(project_id)                                                <== "factored variable"
-# age_at_index=as.numeric(age_at_index)
-# days_to_birth=as.numeric(days_to_birth)
-# ethnicity=as.factor(ethnicity)                                                  <== "factored variable"
-# gender=as.factor(gender)                                                        <== "factored variable"
-# race=as.factor(race)                                                            <== "factored variable"
-# vital_status=as.factor(vital_status)                                            <== "factored variable"
-# age_at_diagnosis=as.numeric(age_at_diagnosis)
-# days_to_last_follow_up=as.numeric(days_to_last_follow_up)
-# days_to_last_known_disease_status=as.numeric(days_to_last_known_disease_status)
-# iss_stage=as.factor(iss_stage)                                                  <== "factored variable"
-# site_of_resection_or_biopsy=as.factor(site_of_resection_or_biopsy)              <== "factored variable"
-# tissue_or_organ_of_origin=as.factor(tissue_or_organ_of_origin)                  <== "factored variable"
-```
-
-
-```{r, echo=FALSE}
-unique(data_subset_nn$project_id)
-unique(data_subset_nn$ethnicity)
-unique(data_subset_nn$gender)
-unique(data_subset_nn$race)
-unique(data_subset_nn$vital_status)
-unique(data_subset_nn$iss_stage)
-unique(data_subset_nn$site_of_resection_or_biopsy)
-unique(data_subset_nn$tissue_or_organ_of_origin)
 ```
 
 
@@ -359,8 +328,8 @@ train_nn <- data_subset_nn_normalized[train_ind,]
 test_nn <- data_subset_nn_normalized[-train_ind,]
 
 # Temporarily removing numeric variables
-train_nn_temp <- subset(train_nn, select = -c(1:5))
-test_nn_temp <- subset(test_nn, select = -c(1:5))
+train_nn <- subset(train_nn, select = -c(1:5))
+test_nn <- subset(test_nn, select = -c(1:5))
 ```
 
 
@@ -371,31 +340,39 @@ test_nn_temp <- subset(test_nn, select = -c(1:5))
 
 # Making the neural network model
 nn <- neuralnet(vital_status_Alive ~ project_id_BEATAML1.0_COHORT + project_id_BEATAML1.0_CRENOLANIB + project_id_CGCI_BLGSP + project_id_GENIE_DFCI + project_id_GENIE_JHU + project_id_GENIE_MDA + project_id_GENIE_MSK + project_id_GENIE_UHN + project_id_GENIE_VICC + project_id_MMRF_COMMPASS +  project_id_OHSU_CNL + project_id_TARGET_ALL_P1 + project_id_TARGET_ALL_P2 + project_id_TARGET_ALL_P3 + project_id_TARGET_AML + project_id_TARGET_NBL + project_id_TCGA_LAML + ethnicity_hispanic + ethnicity_not_hispanic + gender_female + gender_male + race_ameri_ind_or_alaska + race_asian +  race_black_or_afr_ameri + race_hawaiian_or_pacific_islander + race_other + race_white + iss_stage_I + iss_stage_II + iss_stage_III + site_of_resection_or_biopsy_Abdomen_NOS + site_of_resection_or_biopsy_Blood + site_of_resection_or_biopsy_Bone_marrow + site_of_resection_or_biopsy_Bones_of_skull_and_face + site_of_resection_or_biopsy_Cheek_mucosa + site_of_resection_or_biopsy_Connective_and_other_soft_tissues + site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS + site_of_resection_or_biopsy_Head_face_or_neck_NOS + site_of_resection_or_biopsy_Hematopoietic_system_NOS + site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes + site_of_resection_or_biopsy_Kidney_NOS + site_of_resection_or_biopsy_Lip_NOS + site_of_resection_or_biopsy_Liver + site_of_resection_or_biopsy_Lower_gum + site_of_resection_or_biopsy_Lymph_nodes_of_head_face_neck + site_of_resection_or_biopsy_Mandible + site_of_resection_or_biopsy_Mouth_NOS + site_of_resection_or_biopsy_Ovary + site_of_resection_or_biopsy_Pelvis_NOS + site_of_resection_or_biopsy_Peritoneum_NOS + site_of_resection_or_biopsy_Retroperitoneum + site_of_resection_or_biopsy_Small_intestine_NOS + site_of_resection_or_biopsy_Specified_parts_of_peritoneum + site_of_resection_or_biopsy_Spleen + site_of_resection_or_biopsy_Testis_NOS + site_of_resection_or_biopsy_Vestibule_of_mouth + tissue_or_organ_of_origin_Bone_marrow + tissue_or_organ_of_origin_Bones_of_skull_and_face + tissue_or_organ_of_origin_Hematopoietic_system_NOS + tissue_or_organ_of_origin_Orbit_NOS,
-                data=train_nn_temp,
+                data=train_nn,
                 hidden=c(50, 10),#c(50, 10),
                 linear.output=FALSE,
                 threshold=0.01)
+```
 
+
+```{r, echo=FALSE}
 plot(nn)
 ```
 
-
 ```{r, echo=FALSE}
-nn$result.matrix
-```
-
-```{r, echo=FALSE}
-# Testing the resulting output
+# Evaluating the model's accuracy
 prediction_threshold <- 0.5
-nn.results <- compute(nn, test_nn_temp)
+train_nn_results <- compute(nn, train_nn)
+test_nn_results <- compute(nn, test_nn)
 
-prediction <- nn.results$net.result
-prediction[prediction >= prediction_threshold] <- 1
-prediction[prediction < prediction_threshold] <- 0
-prediction <- c(prediction)
-actual <- test_nn$vital_status_Alive
+train_prediction <- train_nn_results$net.result
+train_prediction[train_prediction >= prediction_threshold] <- 1
+train_prediction[train_prediction < prediction_threshold] <- 0
+train_prediction <- c(train_prediction)
+train_actual <- train_nn$vital_status_Alive
 
-confusionMatrix(factor(prediction), factor(actual))
+test_prediction <- test_nn_results$net.result
+test_prediction[test_prediction >= prediction_threshold] <- 1
+test_prediction[test_prediction < prediction_threshold] <- 0
+test_prediction <- c(test_prediction)
+test_actual <- test_nn$vital_status_Alive
+
+# Training set confusion matrix
+confusionMatrix(factor(train_prediction), factor(train_actual))
+# Testing set confusion matrix
+confusionMatrix(factor(test_prediction), factor(test_actual))
 ```
 
 # Results
