updated final report and knitted first PDF version

--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Survival Analysis and Machine Learning Methodologies for Bone Marrow Cancer"
 output:
+  pdf_document:
+    toc: yes
   html_document:
     toc: yes
     theme: united
-  pdf_document:
-    toc: yes
 header-includes: \usepackage{setspace}\doublespacing
 author: Yitian Cai, Rudra Guin, Jorge Portugal
 date: "12/17/2021"
@@ -333,22 +333,26 @@ test_nn <- subset(test_nn, select = -c(1:5))
 ```
 
 
-```{r}
+```{r, echo=FALSE}
 ## Neural Network
 ## (https://datascienceplus.com/neuralnet-train-and-test-neural-networks-using-r/)
 ## (http://uc-r.github.io/ann_classification)
 
 # Making the neural network model
+start <- Sys.time()
 nn <- neuralnet(vital_status_Alive ~ project_id_BEATAML1.0_COHORT + project_id_BEATAML1.0_CRENOLANIB + project_id_CGCI_BLGSP + project_id_GENIE_DFCI + project_id_GENIE_JHU + project_id_GENIE_MDA + project_id_GENIE_MSK + project_id_GENIE_UHN + project_id_GENIE_VICC + project_id_MMRF_COMMPASS +  project_id_OHSU_CNL + project_id_TARGET_ALL_P1 + project_id_TARGET_ALL_P2 + project_id_TARGET_ALL_P3 + project_id_TARGET_AML + project_id_TARGET_NBL + project_id_TCGA_LAML + ethnicity_hispanic + ethnicity_not_hispanic + gender_female + gender_male + race_ameri_ind_or_alaska + race_asian +  race_black_or_afr_ameri + race_hawaiian_or_pacific_islander + race_other + race_white + iss_stage_I + iss_stage_II + iss_stage_III + site_of_resection_or_biopsy_Abdomen_NOS + site_of_resection_or_biopsy_Blood + site_of_resection_or_biopsy_Bone_marrow + site_of_resection_or_biopsy_Bones_of_skull_and_face + site_of_resection_or_biopsy_Cheek_mucosa + site_of_resection_or_biopsy_Connective_and_other_soft_tissues + site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS + site_of_resection_or_biopsy_Head_face_or_neck_NOS + site_of_resection_or_biopsy_Hematopoietic_system_NOS + site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes + site_of_resection_or_biopsy_Kidney_NOS + site_of_resection_or_biopsy_Lip_NOS + site_of_resection_or_biopsy_Liver + site_of_resection_or_biopsy_Lower_gum + site_of_resection_or_biopsy_Lymph_nodes_of_head_face_neck + site_of_resection_or_biopsy_Mandible + site_of_resection_or_biopsy_Mouth_NOS + site_of_resection_or_biopsy_Ovary + site_of_resection_or_biopsy_Pelvis_NOS + site_of_resection_or_biopsy_Peritoneum_NOS + site_of_resection_or_biopsy_Retroperitoneum + site_of_resection_or_biopsy_Small_intestine_NOS + site_of_resection_or_biopsy_Specified_parts_of_peritoneum + site_of_resection_or_biopsy_Spleen + site_of_resection_or_biopsy_Testis_NOS + site_of_resection_or_biopsy_Vestibule_of_mouth + tissue_or_organ_of_origin_Bone_marrow + tissue_or_organ_of_origin_Bones_of_skull_and_face + tissue_or_organ_of_origin_Hematopoietic_system_NOS + tissue_or_organ_of_origin_Orbit_NOS,
                 data=train_nn,
                 hidden=c(50, 10),#c(50, 10),
                 linear.output=FALSE,
                 threshold=0.01)
+end <- Sys.time()
+end - start
 ```
 
 
 ```{r, echo=FALSE}
-plot(nn)
+# Plot to view neural network model, though pretty complicated given the number of nodes involved
+# plot(nn)
 ```
 
 ```{r, echo=FALSE}
